# MentalGymnastics

./: .gitignore  LICENSE  README.md  config.gin  docker_run.sh  dockerfile  dockerfile_w_poetry.bkp  experiment.py  main.py  pyproject.toml  readme.md  setup.cfg
.github/workflows/: python-package.yaml
experiment_configs/: experiment_eight.gin  experiment_eleven.gin  experiment_five.gin  experiment_four.gin  experiment_nine.gin  experiment_one.gin  experiment_seven.gin  experiment_six.gin  experiment_ten.gin  experiment_three.gin  experiment_twelve.gin  experiment_two.gin
experiment_eight/: .manifest
experiment_eight/0ZEKO9Bx5TkJqgtzctvXBNFeXrTC6Np9/: module_dict.pt
experiment_eight/1mq3yrTsOyWlMr00x98CWiBRP6ya3GkE/: module_dict.pt
experiment_eight/1rgKulVQFgkHh3XM67EluAEqgNmfh7V1/: module_dict.pt
experiment_eight/2FT6je6pAFeuGJkRPjUoIC0ynGo4lzQj/: module_dict.pt
experiment_eight/2J233vLAg2cCfUotABgzzs8xI4MK46Jv/: inputs.json  module_dict.pt  net_subspace.json
experiment_eight/2O3PS2KLzR1DrBiTwlE7xeUMzkxTYwVZ/: module_dict.pt  net_subspace.json  score_accuracy.pickle
experiment_eight/2WPW7vJS0TSpI1VlYKZwrUqw5lPztWan/: module_dict.pt  score_accuracy.pickle
experiment_eight/2fpa2U0GHr2HbnSIf7TzEW0w4DowcJ03/: module_dict.pt
experiment_eight/2rpiN241eekIjMlJpFlzwZ0O7h59IqNv/: module_dict.pt
experiment_eight/3dptbvmhfoTEDgdc5BjaD2eo2bkAhhEw/: complexity.json  module_dict.pt
experiment_eight/3nIiU0FrB6Br4HcOmdThawLOUkao9eoV/: module_dict.pt
experiment_eight/3tSk0TiuaTdA1d5nyyQDlVd3ZJP0EMzh/: module_dict.pt
experiment_eight/3vpWHV5umljNYtf2nnYwTJrr4T8NeVIR/: module_dict.pt
experiment_eight/3xDcRMoFJ0wEB5fmCiq4vSq4hlERXgd3/: module_dict.pt
experiment_eight/46jSop0hfKlA8BYM37ZFYfieCw1y3lr9/: complexity.json  module_dict.pt
experiment_eight/48BikF8cOdAaLJYDIG55NQzKjGggZr6p/: module_dict.pt
experiment_eight/4QqKPS7N8eRqK0VDY1vsgfukmowGedjn/: module_dict.pt
experiment_eight/4Yoz3xc0MsrtTTHVXNXB2SZwg3m98nwO/: module_dict.pt
experiment_eight/4pyMKvOnlATthjLR3E55ARz46ALLvHp6/: module_dict.pt  score_reward.pickle
experiment_eight/BnvRMXsuMXbuiYWXqnR6uo5cl2t0Wems/: inputs.json  (+4 more)
experiment_eleven/: .manifest
experiment_five/: .manifest
experiment_four/: .manifest
experiment_nine/: .manifest
experiment_one/: .manifest
experiment_seven/: .manifest
experiment_six/: .manifest
experiment_ten/: .manifest
experiment_three/: .manifest
experiment_twelve/: .manifest
experiment_two/: .manifest
model_eight/: monitor.csv
model_eleven/: monitor.csv
model_five/: monitor.csv
model_four/: monitor.csv
model_nine/: monitor.csv
model_one/: monitor.csv
model_seven/: monitor.csv
model_six/: monitor.csv
model_ten/: monitor.csv
model_three/: monitor.csv
model_twelve/: monitor.csv
model_two/: monitor.csv
src/: CartPole.py  __init__.py  agent.py  agentNets.py  setup.py
testing/: .manifest
tests/: .functionbank.py.swp  actionbank.py  data.py  functionbank.py  test_mentalenv.py
(+6612 files in other folders)
