[metadata]
name = mentalgym
version = 0.0.1
author = "Timothy D Luna, Ali K., Christianne I., Vahe H."
author_email = "timothy.d.luna@gmail.com, @, @, @"
description = Learning to learn with spatial experimentation
long_desction = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LunarEngineer/MentalGymnastics
project_urls =
    Bug Tracker = https://github.com/LunarEngineer/MentalGymnastics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Ubuntu 18.04

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.9
install_requires =
    tensorflow >= 2.3.0
    bandit >= 1.6.2
    flake8 >= 3.9.0
    gym >= 0.18.0
    mypy >= 0.812
    numpy >= 1.20.2
    pandas >= 1.2.3
    pytest >= 6.1.2
    ray >= 1.2.0
    scikit-learn >= 0.24.1
    virtualenv >= 20.4.3
    stable-baselines3 >= 1.0